upgrade Falcosidekick chart to 0.5.10
Signed-off-by: Thomas Labarussias <issif+github@gadz.org>
Co-authored-by: Lyonel Martinez <lyonel.martinez@numberly.com>

--- a/falcosidekick/templates/deployment-ui.yaml
+++ b/falcosidekick/templates/deployment-ui.yaml
@@ -59,6 +59,18 @@ spec:
             {{- else if .Values.webui.externalRedis.enabled }}
             - "{{ required "External Redis is enabled. Please set the URL to the database." .Values.webui.externalRedis.url }}:{{ .Values.webui.externalRedis.port | default "6379" }}"
             {{- end}}
+            {{- if .Values.webui.ttl }}
+            - "-t"
+            - {{- .Values.webui.ttl }}
+            {{- end}}
+            {{- if .Values.webui.loglevel }}
+            - "-l"
+            - {{- .Values.webui.loglevel }}
+            {{- end}}
+            {{- if .Values.webui.user }}
+            - "-u"
+            - {{- .Values.webui.user }}
+            {{- end}}
           ports:
             - name: http
               containerPort: 2802
