--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -15,6 +15,7 @@ type: Opaque
 data:
   # Slack Output
   SLACK_WEBHOOKURL: "{{ .Values.config.slack.webhookurl | b64enc }}"
+  SLACK_CHANNEL: "{{ .Values.config.slack.channel | b64enc }}"
   SLACK_OUTPUTFORMAT: "{{ .Values.config.slack.outputformat | b64enc }}"
   SLACK_FOOTER: "{{ .Values.config.slack.footer | b64enc }}"
   SLACK_ICON: "{{ .Values.config.slack.icon | b64enc }}"
@@ -58,6 +59,8 @@ data:
   ALERTMANAGER_HOSTPORT: "{{ .Values.config.alertmanager.hostport | b64enc }}"
   ALERTMANAGER_ENDPOINT: "{{ .Values.config.alertmanager.endpoint | b64enc }}"
   ALERTMANAGER_EXPIRESAFTER: "{{ .Values.config.alertmanager.expireafter | b64enc }}"
+  ALERTMANAGER_EXTRALABELS: "{{ .Values.config.alertmanager.extralabels | b64enc }}"
+  ALERTMANAGER_EXTRAANNOTATIONS: "{{ .Values.config.alertmanager.extraannotations | b64enc }}"
   ALERTMANAGER_MINIMUMPRIORITY: "{{ .Values.config.alertmanager.minimumpriority | b64enc }}"
   ALERTMANAGER_MUTUALTLS: "{{ .Values.config.alertmanager.mutualtls | printf "%t" | b64enc }}"
   ALERTMANAGER_CHECKCERT: "{{ .Values.config.alertmanager.checkcert | printf "%t" | b64enc }}"
@@ -65,7 +68,10 @@ data:
   # InfluxDB Output
   INFLUXDB_USER: "{{ .Values.config.influxdb.user | b64enc }}"
   INFLUXDB_PASSWORD: "{{ .Values.config.influxdb.password | b64enc }}"
+  INFLUXDB_TOKEN: "{{ .Values.config.influxdb.token | b64enc }}"
   INFLUXDB_HOSTPORT: "{{ .Values.config.influxdb.hostport | b64enc }}"
+  INFLUXDB_ORGANIZATION: "{{ .Values.config.influxdb.organization | b64enc }}"
+  INFLUXDB_PRECISION: "{{ .Values.config.influxdb.precision | b64enc }}"
   INFLUXDB_MINIMUMPRIORITY: "{{ .Values.config.influxdb.minimumpriority | b64enc }}"
   INFLUXDB_DATABASE: "{{ .Values.config.influxdb.database | b64enc }}"
   INFLUXDB_MUTUALTLS: "{{ .Values.config.influxdb.mutualtls | printf "%t" | b64enc }}"
@@ -75,6 +81,7 @@ data:
   AWS_ACCESSKEYID: "{{ .Values.config.aws.accesskeyid | b64enc }}"
   AWS_SECRETACCESSKEY: "{{ .Values.config.aws.secretaccesskey | b64enc }}"
   AWS_REGION: "{{ .Values.config.aws.region | b64enc }}"
+  AWS_CHECKIDENTITY: "{{ .Values.config.aws.checkidentity | printf "%t" | b64enc }}"
   AWS_LAMBDA_FUNCTIONNAME: "{{ .Values.config.aws.lambda.functionname | b64enc }}"
   AWS_LAMBDA_MINIMUMPRIORITY: "{{ .Values.config.aws.lambda.minimumpriority | b64enc }}"
   AWS_CLOUDWATCHLOGS_LOGGROUP: "{{ .Values.config.aws.cloudwatchlogs.loggroup | b64enc }}"
@@ -90,13 +97,24 @@ data:
   AWS_S3_MINIMUMPRIORITY: "{{ .Values.config.aws.s3.minimumpriority | b64enc }}"
   AWS_KINESIS_STREAMNAME: "{{ .Values.config.aws.kinesis.streamname | b64enc }}"
   AWS_KINESIS_MINIMUMPRIORITY: "{{ .Values.config.aws.kinesis.minimumpriority | b64enc }}"
+  AWS_SECURITYLAKE_BUCKET: "{{ .Values.config.aws.securitylake.bucket | b64enc }}"
+  AWS_SECURITYLAKE_REGION: "{{ .Values.config.aws.securitylake.region | b64enc }}"
+  AWS_SECURITYLAKE_PREFIX: "{{ .Values.config.aws.securitylake.prefix | b64enc }}"
+  AWS_SECURITYLAKE_ACCOUNTID: "{{ .Values.config.aws.securitylake.accountid | b64enc }}"
+  AWS_SECURITYLAKE_INTERVAL: "{{ .Values.config.aws.securitylake.interval | toString | b64enc }}"
+  AWS_SECURITYLAKE_BATCHSIZE: "{{ .Values.config.aws.securitylake.batchsize | toString | b64enc }}"
+  AWS_SECURITYLAKE_MINIMUMPRIORITY: "{{ .Values.config.aws.securitylake.minimumpriority | b64enc }}"
 
   # SMTP Output
   SMTP_USER: "{{ .Values.config.smtp.user | b64enc }}"
   SMTP_PASSWORD: "{{ .Values.config.smtp.password | b64enc }}"
+  SMTP_AUTHMECHANISM: "{{ .Values.config.smtp.authmechanism | b64enc }}"
   SMTP_HOSTPORT: "{{ .Values.config.smtp.hostport | b64enc }}"
   SMTP_FROM: "{{ .Values.config.smtp.from | b64enc }}"
   SMTP_TO: "{{ .Values.config.smtp.to | b64enc }}"
+  SMTP_TOKEN: "{{ .Values.config.smtp.token | b64enc }}"
+  SMTP_IDENTITY: "{{ .Values.config.smtp.identity | b64enc }}"
+  SMTP_TRACE: "{{ .Values.config.smtp.trace | b64enc }}"
   SMTP_OUTPUTFORMAT: "{{ .Values.config.smtp.outputformat | b64enc }}"
   SMTP_MINIMUMPRIORITY: "{{ .Values.config.smtp.minimumpriority | b64enc }}"
 
@@ -136,6 +154,7 @@ data:
   ELASTICSEARCH_HOSTPORT: "{{ .Values.config.elasticsearch.hostport | b64enc }}"
   ELASTICSEARCH_INDEX: "{{ .Values.config.elasticsearch.index | b64enc }}"
   ELASTICSEARCH_TYPE: "{{ .Values.config.elasticsearch.type | b64enc }}"
+  ELASTICSEARCH_SUFFIX: "{{ .Values.config.elasticsearch.suffix | b64enc }}"
   ELASTICSEARCH_MINIMUMPRIORITY: "{{ .Values.config.elasticsearch.minimumpriority | b64enc }}"
   ELASTICSEARCH_MUTUALTLS: "{{ .Values.config.elasticsearch.mutualtls | printf "%t" | b64enc }}"
   ELASTICSEARCH_CHECKCERT: "{{ .Values.config.elasticsearch.checkcert | printf "%t" | b64enc }}"
@@ -145,6 +164,8 @@ data:
   # Loki Output
   LOKI_HOSTPORT: "{{ .Values.config.loki.hostport | b64enc }}"
   LOKI_ENDPOINT: "{{ .Values.config.loki.endpoint | b64enc }}"
+  LOKI_USER: "{{ .Values.config.loki.user | b64enc }}"
+  LOKI_APIKEY: "{{ .Values.config.loki.apikey | b64enc }}"
   LOKI_TENANT: "{{ .Values.config.loki.tenant | b64enc }}"
   LOKI_EXTRALABELS: "{{ .Values.config.loki.extralabels | b64enc }}"
   LOKI_MINIMUMPRIORITY: "{{ .Values.config.loki.minimumpriority | b64enc }}"
@@ -192,6 +213,14 @@ data:
   # Kafka Output
   KAFKA_HOSTPORT: "{{ .Values.config.kafka.hostport | b64enc }}"
   KAFKA_TOPIC: "{{ .Values.config.kafka.topic | b64enc }}"
+  KAFKA_SASL: "{{ .Values.config.kafka.sasl | b64enc }}"
+  KAFKA_USERNAME: "{{ .Values.config.kafka.username | b64enc }}"
+  KAFKA_PASSWORD: "{{ .Values.config.kafka.password | b64enc }}"
+  KAFKA_ASYNC: "{{ .Values.config.kafka.async | printf "%t" | b64enc }}"
+  KAFKA_REQUIREDACKS: "{{ .Values.config.kafka.requiredacks | b64enc }}"
+  KAFKA_COMPRESSION: "{{ .Values.config.kafka.compression | b64enc }}"
+  KAFKA_BALANCER: "{{ .Values.config.kafka.balancer | b64enc }}"
+  KAFKA_CLIENTID: "{{ .Values.config.kafka.clientid | b64enc }}"
   KAFKA_MINIMUMPRIORITY: "{{ .Values.config.kafka.minimumpriority | b64enc }}"
 
   # PagerDuty Output
@@ -263,6 +292,9 @@ data:
   YANDEX_S3_BUCKET: "{{ .Values.config.yandex.s3.bucket | b64enc}}"
   YANDEX_S3_PREFIX: "{{ .Values.config.yandex.s3.prefix | b64enc}}"
   YANDEX_S3_MINIMUMPRIORITY: "{{ .Values.config.yandex.s3.minimumpriority | b64enc}}"
+  YANDEX_DATASTREAMS_ENDPOINT: "{{ .Values.config.yandex.datastreams.endpoint | b64enc}}"
+  YANDEX_DATASTREAMS_STREAMNAME: "{{ .Values.config.yandex.datastreams.streamname | b64enc}}"
+  YANDEX_DATASTREAMS_MINIMUMPRIORITY: "{{ .Values.config.yandex.datastreams.minimumpriority | b64enc}}"
 
   # KafkaRest Output
   KAFKAREST_ADDRESS: "{{ .Values.config.kafkarest.address | b64enc}}"
@@ -275,6 +307,7 @@ data:
   SYSLOG_HOST: "{{ .Values.config.syslog.host | b64enc}}"
   SYSLOG_PORT: "{{ .Values.config.syslog.port | b64enc}}"
   SYSLOG_PROTOCOL: "{{ .Values.config.syslog.protocol | b64enc}}"
+  SYSLOG_FORMAT: "{{ .Values.config.syslog.format | b64enc}}"
   SYSLOG_MINIMUMPRIORITY : "{{ .Values.config.syslog.minimumpriority | b64enc}}"
 
   # Zoho Cliq
@@ -291,6 +324,61 @@ data:
   POLICYREPORT_MAXEVENTS: "{{ .Values.config.policyreport.maxevents | toString | b64enc}}"
   POLICYREPORT_PRUNEBYPRIORITY: "{{ .Values.config.policyreport.prunebypriority | printf "%t" | b64enc}}"
   POLICYREPORT_MINIMUMPRIORITY : "{{ .Values.config.policyreport.minimumpriority | b64enc}}"
+
+  # Node Red
+  NODERED_ADDRESS: "{{ .Values.config.nodered.address | b64enc}}"
+  NODERED_USER: "{{ .Values.config.nodered.user | b64enc}}"
+  NODERED_PASSWORD: "{{ .Values.config.nodered.password | b64enc}}"
+  NODERED_CUSTOMHEADERS: "{{ .Values.config.nodered.customheaders | b64enc}}"
+  NODERED_CHECKCERT : "{{ .Values.config.nodered.checkcert | printf "%t" | b64enc}}"
+  NODERED_MINIMUMPRIORITY : "{{ .Values.config.nodered.minimumpriority | b64enc}}"
+
+  # MQTT
+  MQTT_BROKER: "{{ .Values.config.mqtt.broker | b64enc}}"
+  MQTT_TOPIC: "{{ .Values.config.mqtt.topic | b64enc}}"
+  MQTT_QOS: "{{ .Values.config.mqtt.qos | toString | b64enc}}"
+  MQTT_RETAINED : "{{ .Values.config.mqtt.retained | printf "%t" | b64enc}}"
+  MQTT_USER: "{{ .Values.config.mqtt.user | b64enc}}"
+  MQTT_PASSWORD: "{{ .Values.config.mqtt.password | b64enc}}"
+  MQTT_CHECKCERT : "{{ .Values.config.mqtt.checkcert | printf "%t" | b64enc}}"
+  MQTT_MINIMUMPRIORITY : "{{ .Values.config.mqtt.minimumpriority | b64enc}}"
+
+  # Zincsearch
+  ZINCSEARCH_HOSTPORT: "{{ .Values.config.zincsearch.hostport | b64enc}}"
+  ZINCSEARCH_INDEX: "{{ .Values.config.zincsearch.index | b64enc}}"
+  ZINCSEARCH_USERNAME: "{{ .Values.config.zincsearch.username | b64enc}}"
+  ZINCSEARCH_PASSWORD: "{{ .Values.config.zincsearch.password | b64enc}}"
+  ZINCSEARCH_CHECKCERT : "{{ .Values.config.zincsearch.checkcert | printf "%t" | b64enc}}"
+  ZINCSEARCH_MINIMUMPRIORITY : "{{ .Values.config.zincsearch.minimumpriority | b64enc}}"
+
+  # Gotify
+  GOTIFY_HOSTPORT: "{{ .Values.config.gotify.hostport | b64enc}}"
+  GOTIFY_TOKEN: "{{ .Values.config.gotify.token | b64enc}}"
+  GOTIFY_FORMAT: "{{ .Values.config.gotify.format | b64enc}}"
+  GOTIFY_CHECKCERT : "{{ .Values.config.gotify.checkcert | printf "%t" | b64enc}}"
+  GOTIFY_MINIMUMPRIORITY : "{{ .Values.config.gotify.minimumpriority | b64enc}}"
+
+  # Tekton
+  TEKTON_EVENTLISTENER: "{{ .Values.config.tekton.eventlistener | b64enc}}"
+  TEKTON_CHECKCERT : "{{ .Values.config.tekton.checkcert | printf "%t" | b64enc}}"
+  TEKTON_MINIMUMPRIORITY : "{{ .Values.config.tekton.minimumpriority | b64enc}}"
+
+  # Spyderbat
+  SPYDERBAT_ORGUID: "{{ .Values.config.spyderbat.orguid | b64enc}}"
+  SPYDERBAT_APIKEY: "{{ .Values.config.spyderbat.apikey | b64enc}}"
+  SPYDERBAT_APIURL: "{{ .Values.config.spyderbat.apiurl | b64enc}}"
+  SPYDERBAT_SOURCE: "{{ .Values.config.spyderbat.source | b64enc}}"
+  SPYDERBAT_SOURCEDESCRIPTION: "{{ .Values.config.spyderbat.sourcedescription | b64enc}}"
+  SPYDERBAT_MINIMUMPRIORITY : "{{ .Values.config.spyderbat.minimumpriority | b64enc}}"
+
+  # TimescaleDB
+  TIMESCALEDB_HOST: "{{ .Values.config.timescaledb.host | b64enc}}"
+  TIMESCALEDB_PORT: "{{ .Values.config.timescaledb.port | toString | b64enc}}"
+  TIMESCALEDB_USER: "{{ .Values.config.timescaledb.user | b64enc}}"
+  TIMESCALEDB_PASSWORD: "{{ .Values.config.timescaledb.password | b64enc}}"
+  TIMESCALEDB_DATABASE: "{{ .Values.config.timescaledb.database | b64enc}}"
+  TIMESCALEDB_HYPERTABLENAME: "{{ .Values.config.timescaledb.hypertablename | b64enc}}"
+  TIMESCALEDB_MINIMUMPRIORITY : "{{ .Values.config.timescaledb.minimumpriority | b64enc}}"
 
   # WebUI Output
   {{- if .Values.webui.enabled -}}
