Add folder to values
Signed-off-by: hehuels <hehuels@outlook.de>

--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -113,6 +113,7 @@ serviceMonitor:
 
 grafanaDashboard:
   enabled: false
+  folder:
   namespace: default
   prometheusDatasourceName: Prometheus
 scc:
