Fix missing space in Falcosidekick-UI arguments
Signed-off-by: Thomas Labarussias <issif+github@gadz.org>

--- a/falcosidekick/templates/deployment-ui.yaml
+++ b/falcosidekick/templates/deployment-ui.yaml
@@ -65,11 +65,11 @@ spec:
             {{- end}}
             {{- if .Values.webui.loglevel }}
             - "-l"
-            - {{- .Values.webui.loglevel }}
+            - {{ .Values.webui.loglevel }}
             {{- end}}
             {{- if .Values.webui.user }}
             - "-u"
-            - {{- .Values.webui.user }}
+            - {{ .Values.webui.user }}
             {{- end}}
           ports:
             - name: http
