Fix missing space in Falcosidekick-UI ttl argument
Signed-off-by: Jesús Carpintero <jesus.carpintero@gmail.com>

--- a/falcosidekick/templates/deployment-ui.yaml
+++ b/falcosidekick/templates/deployment-ui.yaml
@@ -61,7 +61,7 @@ spec:
             {{- end}}
             {{- if .Values.webui.ttl }}
             - "-t"
-            - {{- .Values.webui.ttl }}
+            - {{ .Values.webui.ttl }}
             {{- end}}
             {{- if .Values.webui.loglevel }}
             - "-l"
