feat: expose controller annotations
Signed-off-by: Cynthia Baran <cynthia.baran@ifood.com.br>

--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -137,6 +137,8 @@ tty: false
 controller:
   # Available options: deployment, daemonset.
   kind: daemonset
+  # Annotations to add to the daemonset or deployment
+  annotations: {}
   daemonset:
     updateStrategy:
       # You can also customize maxUnavailable or minReadySeconds if you
