fix prometheus extralabels configuration in falcosidekick and bump chart version to 0.5.14
Signed-off-by: saadjaved <saadjaved3@yahoo.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -173,7 +173,7 @@ data:
   LOKI_CHECKCERT: "{{ .Values.config.loki.checkcert | printf "%t" | b64enc }}"
 
   # Prometheus Output
-  PROMETHEUS_EXTRALABELS: "{{ .Values.config.loki.extralabels | b64enc }}"
+  PROMETHEUS_EXTRALABELS: "{{ .Values.config.prometheus.extralabels | b64enc }}"
 
   # Nats Output
   NATS_HOSTPORT: "{{ .Values.config.nats.hostport | b64enc }}"
