--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -58,7 +58,7 @@ podSecurityContext: {}
 # 1) driver.enabled = false:
 #    securityContext: {}
 #
-# 2) driver.enabled = true and driver.kind = module:
+# 2) driver.enabled = true and (driver.kind = module || driver.kind = modern-bpf):
 #    securityContext:
 #     privileged: true
 #
@@ -176,7 +176,7 @@ driver:
   # -- Set it to false if you want to deploy Falco without the drivers.
   # Always set it to false when using Falco with plugins.
   enabled: true
-  # -- Tell Falco which driver to use. Available options: module (kernel driver) and ebpf (eBPF probe).
+  # -- Tell Falco which driver to use. Available options: module (kernel driver), ebpf (eBPF probe), modern-bpf (modern eBPF probe).
   kind: module
   # -- Configuration section for ebpf driver.
   ebpf:
@@ -210,7 +210,7 @@ driver:
       args: []
       # -- Resources requests and limits for the Falco driver loader init container.
       resources: {}
-      # -- Security context for the Falco driver loader init container. Overrides the default security context. If driver.mode == "module" you must at least set `privileged: true`.
+      # -- Security context for the Falco driver loader init container. Overrides the default security context. If driver.kind == "module" you must at least set `privileged: true`.
       securityContext: {}
 
 # -- Gvisor configuration. Based on your system you need to set the appropriate values.
@@ -639,6 +639,74 @@ falco:
   # Please pay attention when you use this parameter and change it only if the default size doesn't fit your use case.
   # -- This is an index that controls the dimension of the syscall buffers.
   syscall_buf_size_preset: 4
+
+  ############## [EXPERIMENTAL] Modern BPF probe specific ##############
+  # Please note: these configs regard only the modern BPF probe. They
+  # are experimental so they could change over releases.
+  #
+  # `cpus_for_each_syscall_buffer`
+  #
+  # --- [Description]
+  #
+  # This is an index that controls how many CPUs you want to assign to a single
+  # syscall buffer (ring buffer). By default, every syscall buffer is associated to
+  # 2 CPUs, so the mapping is 1:2. The modern BPF probe allows you to choose different
+  # mappings, for example, 1:1 would mean a syscall buffer for each CPU.
+  #
+  # --- [Usage]
+  #
+  # You can choose between different indexes: from `0` to `MAX_NUMBER_ONLINE_CPUs`.
+  # `0` is a special value and it means a single syscall buffer shared between all
+  # your online CPUs. `0` has the same effect as `MAX_NUMBER_ONLINE_CPUs`, the rationale
+  # is that `0` allows you to create a single buffer without knowing the number of online
+  # CPUs on your system.
+  # Let's consider an example to better understand it:
+  #
+  # Consider a system with 7 online CPUs:
+  #
+  #          CPUs     0  X  2  3  X  X  6  7  8  9   (X means offline CPU)
+  #
+  # - `1` means a syscall buffer for each CPU so 7 buffers
+  #
+  #          CPUs     0  X  2  3  X  X  6  7  8  9   (X means offline CPU)
+  #                   |     |  |        |  |  |  |
+  #       BUFFERs     0     1  2        3  4  5  6
+  #
+  # - `2` (Default value) means a syscall buffer for each CPU pair, so 4 buffers
+  #
+  #          CPUs     0  X  2  3  X  X  6  7  8  9   (X means offline CPU)
+  #                   |     |  |        |  |  |  |
+  #       BUFFERs     0     0  1        1  2  2  3
+  #
+  # Please note that we need 4 buffers, 3 buffers are associated with CPU pairs, the last
+  # one is mapped with just 1 CPU since we have an odd number of CPUs.
+  #
+  # - `0` or `MAX_NUMBER_ONLINE_CPUs` mean a syscall buffer shared between all CPUs, so 1 buffer
+  #
+  #          CPUs     0  X  2  3  X  X  6  7  8  9   (X means offline CPU)
+  #                   |     |  |        |  |  |  |
+  #       BUFFERs     0     0  0        0  0  0  0
+  #
+  # Moreover you can combine this param with `syscall_buf_size_preset`
+  # index, for example, you could create a huge single syscall buffer
+  # shared between all your online CPUs of 512 MB (so `syscall_buf_size_preset=10`).
+  #
+  # --- [Suggestions]
+  #
+  # We chose index `2` (so one syscall buffer for each CPU pair) as default because the modern bpf probe
+  # follows a different memory allocation strategy with respect to the other 2 drivers (bpf and kernel module).
+  # By the way, you are free to find the preferred configuration for your system.
+  # Considering a fixed `syscall_buf_size_preset` and so a fixed buffer dimension:
+  # - a lower number of buffers can speed up your system (lower memory footprint)
+  # - a too lower number of buffers could increase contention in the kernel causing an
+  #   overall slowdown of the system.
+  # If you don't have huge events throughputs and you are not experimenting with tons of drops
+  # you can try to reduce the number of buffers to have a lower memory footprint
+
+  modern_bpf:
+    # -- [MODERN PROBE ONLY] This is an index that controls how many CPUs you want to assign to a single syscall buffer.
+    cpus_for_each_syscall_buffer: 2
+  ############## [EXPERIMENTAL] Modern BPF probe specific ##############
 
   # Falco continuously monitors outputs performance. When an output channel does not allow
   # to deliver an alert within a given deadline, an error is reported indicating
