new(falcosidekick): add nodeSelector, tolerations and affinity values for test connection pod
Signed-off-by: SEANDOUGHTY <sean@render.com>

--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -799,6 +799,16 @@ extraVolumeMounts: []
 # - mountPath: /etc/certs/mtlscert.optional.tls
 #   name: optional-mtls-volume
 
+testConnection:
+  # -- test connection nodeSelector field
+  nodeSelector: {}
+
+  # -- Tolerations for pod assignment
+  tolerations: []
+
+  # -- Affinity for the test connection pod
+  affinity: {}
+
 webui:
   # -- enable Falcosidekick-UI
   enabled: false
