allow to set allowcors in Falcosidekick-UI
Signed-off-by: Thomas Labarussias <issif+github@gadz.org>

--- a/falcosidekick/templates/deployment-ui.yaml
+++ b/falcosidekick/templates/deployment-ui.yaml
@@ -71,6 +71,9 @@ spec:
             - "-u"
             - {{ .Values.webui.user }}
             {{- end}}
+            {{- if .Values.webui.allowcors }}
+            - "-x"
+            {{- end}}
           ports:
             - name: http
               containerPort: 2802
