Fix typo in values-k8audit file
Signed-off-by: Hasan Aliyev <hasan.aliyeev@gmail.com>

--- a/falco/values-k8saudit.yaml
+++ b/falco/values-k8saudit.yaml
@@ -1,4 +1,4 @@
-# -- Disable the drivers since we want to deplouy only the k8saudit plugin.
+# -- Disable the drivers since we want to deploy only the k8saudit plugin.
 driver:
   enabled: false
 
