fix(falco-expoter): drop unnecessary caps
Signed-off-by: Roberto Scolaro <roberto.scolaro21@gmail.com>

--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -88,13 +88,14 @@ daemonset:
   podLabels: {}
 
 securityContext:
-  {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+  capabilities:
+    drop:
+    - ALL
+  readOnlyRootFilesystem: true
+  allowPrivilegeEscalation: false
+  privileged: false
+  seccompProfile:
+    type: RuntimeDefault
 
 resources:
   {}
