--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -16,8 +16,25 @@ service:
   mTLS:
     enabled: false
 
-# /readiness and /liveness probes port
-probesPort: 19376
+healthChecks:
+  livenessProbe:
+    # liveness probes port
+    probesPort: 19376
+    # -- Tells the kubelet that it should wait X seconds before performing the first probe.
+    initialDelaySeconds: 60
+    # -- Number of seconds after which the probe times out.
+    timeoutSeconds: 5
+    # -- Specifies that the kubelet should perform the check every x seconds.
+    periodSeconds: 15
+  readinessProbe:
+    # readiness probes port
+    probesPort: 19376
+    # -- Tells the kubelet that it should wait X seconds before performing the first probe.
+    initialDelaySeconds: 30
+    # -- Number of seconds after which the probe times out.
+    timeoutSeconds: 5
+    # -- Specifies that the kubelet should perform the check every x seconds.
+    periodSeconds: 15
 
 image:
   registry: docker.io
