--- a/falco/Chart.yaml
+++ b/falco/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: falco
-version: 3.1.5
-appVersion: 0.34.1
+version: 3.2.0
+appVersion: "0.35.0"
 description: Falco
 keywords:
   - monitoring
