Use empty string in falco.http_output.url
Signed-off-by: Mehdi Khelifi <mehdi.khelifi@euranova.eu>

--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -614,7 +614,7 @@ falco:
   # -- Send logs to an HTTP endpoint or webhook.
   http_output:
     enabled: false
-    url: 
+    url: ""
     user_agent: "falcosecurity/falco"
     # -- Tell Falco to not verify the remote server.
     insecure: false
