fix interpolation of SYSLOG_PORT
Signed-off-by: Thomas Labarussias <issif+github@gadz.org>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -309,7 +309,7 @@ data:
 
   # Syslog
   SYSLOG_HOST: "{{ .Values.config.syslog.host | b64enc}}"
-  SYSLOG_PORT: "{{ .Values.config.syslog.port | b64enc}}"
+  SYSLOG_PORT: "{{ .Values.config.syslog.port | toString | b64enc}}"
   SYSLOG_PROTOCOL: "{{ .Values.config.syslog.protocol | b64enc}}"
   SYSLOG_FORMAT: "{{ .Values.config.syslog.format | b64enc}}"
   SYSLOG_MINIMUMPRIORITY : "{{ .Values.config.syslog.minimumpriority | b64enc}}"
